javascript functionality done

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -9,17 +9,22 @@
   <body>
     <main>
       <section id="heading">
-        <img src="Media/icon-star.svg" alt="star-icon" srcset="" />
-        <h1>FAQ</h1>
+        <img src="Media/icon-star.svg" alt="star-icon" srcset="" class="star" />
+        <h1>FAQs</h1>
       </section>
 
       <section id="main-drop">
         <div id="drop-1">
           <div class="question1">
             <h2>What is Frontend Mentor, and how will it help me?</h2>
-            <img src="Media/icon-plus.svg" alt="plus-sign-icon" />
+            <img
+              src="Media/icon-plus.svg"
+              alt="plus-sign-icon"
+              id="first-s"
+              class="plus"
+            />
           </div>
-          <p>
+          <p class="first-p">
             Frontend Mentor offers realistic coding challenges to help
             developers improve their frontend coding skills with projects in
             HTML, CSS, and JavaScript. It's suitable for all levels and ideal
@@ -30,11 +35,14 @@
         <div id="drop-2">
           <div class="question2">
             <h2>Is Frontend Mentor free?</h2>
-            <div class="icon2">
-              <img src="Media/icon-plus.svg" alt="plus-sign-icon" />
-            </div>
+            <img
+              src="Media/icon-plus.svg"
+              alt="plus-sign-icon"
+              id="second-s"
+              class="plus"
+            />
           </div>
-          <p>
+          <p class="second-p">
             Yes, Frontend Mentor offers both free and premium coding challenges,
             with the free option providing access to a range of projects
             suitable for all skill levels.
@@ -44,11 +52,14 @@
         <div id="drop-3">
           <div class="question3">
             <h2>Can I use Frontend Mentor projects in my portfolio?</h2>
-            <div class="icon3">
-              <img src="Media/icon-plus.svg" alt="plus-sign-icon" />
-            </div>
+            <img
+              src="Media/icon-plus.svg"
+              alt="plus-sign-icon"
+              id="third-s"
+              class="plus"
+            />
           </div>
-          <p>
+          <p class="third-p">
             Yes, you can use projects completed on Frontend Mentor in your
             portfolio. It's an excellent way to showcase your skills to
             potential employers!
@@ -61,10 +72,15 @@
               How can I get help if I'm stuck on a Frontend Mentor challenge?
             </h2>
             <div class="icon4">
-              <img src="Media/icon-plus.svg" alt="plus-sign-icon" />
+              <img
+                src="Media/icon-plus.svg"
+                alt="plus-sign-icon"
+                id="fourth-s"
+                class="plus"
+              />
             </div>
           </div>
-          <p>
+          <p class="fourth-p">
             The best place to get help is inside Frontend Mentor's Discord
             community. There's a help channel where you can ask questions and
             seek support from other community members.
