--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="tablet.css" media="(max-width:900px)" />
+    <link rel="stylesheet" href="mobile.css" media="(max-width:600px)" />
+    <link rel="stylesheet" href="small.css" media="(max-width:400px)" />
+    <!-- 600px -->
     <title>FAQ Accordion</title>
   </head>
   <body>
