--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
     <link rel="stylesheet" href="tablet.css" media="(max-width:900px)" />
     <link rel="stylesheet" href="mobile.css" media="(max-width:600px)" />
     <link rel="stylesheet" href="small.css" media="(max-width:400px)" />
-    <!-- 600px -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
     <title>FAQ Accordion</title>
   </head>
   <body>
